GPUS-Kubernetes/kubernetes-basics-to-advanced-main/ml-on-kubernetes/deploy-ml-model/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-demo-svc
spec:
  selector:
    app: ml-demo
  ports:
  - port: 80
    targetPort: 8000
